# build/swagger.json
@@ -6,26 +6,35 @@
 	"definitions": {
 		"UserCreationParams": {
 			"properties": {
-				"password": {
-					"type": "string"
-				},
-				"email": {
+				"names": {
 					"type": "string"
 				},
 				"lastNames": {
 					"type": "string"
 				},
-				"names": {
+				"phone": {
+					"type": "string"
+				},
+				"email": {
+					"type": "string"
+				},
+				"password": {
+					"type": "string"
+				},
+				"photo": {
 					"type": "string"
 				}
 			},
 			"required": [
-				"password",
-				"email",
+				"names",
 				"lastNames",
-				"names"
+				"phone",
+				"email",
+				"password",
+				"photo"
 			],
-			"type": "object"
+			"type": "object",
+			"additionalProperties": false
 		}
 	},
 	"info": {
