# src/contexts/keliarAcademy/auth/domain/AuthTypes.ts
@@ -1,0 +1,8 @@
+/**
+ *
+ */
+
+export interface AuthParams {
+  password: string
+  email: string
+}
